(temp) Connects database somewhat

--- a/bower.json
+++ b/bower.json
@@ -18,12 +18,10 @@
   ],
   "dependencies": {
     "angular": "latest",
-    "angular-ui-router": "latest",
     "angular-animate": "latest",
-    "underscore": "^1.8.3",
-    "jquery": "^3.0.0",
     "angular-sanitize": "^1.5.7",
-    "highcharts-ng": "^0.0.11"
+    "highcharts-ng": "^0.0.11",
+    "angular-route": "^1.5.7"
   },
   "resolutions": {
     "angular": "1.5.7"
